# gdiopt

./: CMakeLists.txt  README.md  Toolchain.cmake
src/: gdiopt.cpp  gdiopt.h
